go-web-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-go-service
spec:
  selector:
    app: go-web-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
