go-web-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-go-ingress
spec:
  rules:
  - host: go-web-go.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-go-service
            port:
              number: 80
